--- a/功能计划.md
+++ b/功能计划.md
@@ -140,6 +140,10 @@
 
 ## 控制台
 
+所有筛选和排序条件均为可选项，支持多于一条筛选依据，筛选条件之间AND关系，筛选条件内部OR关系
+
+所谓“上级组织筛选”，给定一组上级组织，只要求所属组织的任意一级上级组织在这组组织中
+
 ### 用户管理
 
 （管理员）创建用户，支持批量导入
@@ -148,9 +152,15 @@
 
 （管理员）修改用户信息
 
+（管理员）查看所有用户，能够条件筛选
+
 （管理员）停用用户
 
 （组织负责人）在下级组织间修改组织
+
+（组织负责人）查看负责的所有组织和下级组织的所有用户，组织、上级组织、社团条件筛选
+
+（社团负责人）查看负责的所有社团的所有用户，组织、上级组织、社团条件筛选
 
 ### 组织管理
 
@@ -160,13 +170,15 @@
 
 （管理员）停用组织
 
+（管理员）查看所有组织，上级组织条件筛选，人数排序
+
 （组织负责人）创建下级组织
 
 （组织负责人）转让组织
 
 （组织负责人）停用下级组织
 
-（管理员、组织负责人）查看组织成员列表
+（组织负责人）查看负责的所有组织和下级组织，上级组织条件筛选，人数排序
 
 ### 社团管理
 
@@ -182,13 +194,17 @@
 
 （社团负责人）转让社团
 
-（管理员、组织负责人、社团负责人）查看社团成员列表，管理社团成员
+（管理员、组织负责人、社团负责人）管理社团成员
+
+（管理员、组织负责人、社团负责人）查看管理社团列表，组织、上级组织条件筛选，人数排序
 
 ### 社团申请
 
 （普通用户）查看社团申请，提交社团申请
 
 （社团负责人）查看社团申请，审核社团申请
+
+以上，社团、社团组织、社团上级组织、用户组织、用户上级组织条件筛选
 
 ### 场所管理
 
@@ -198,11 +214,17 @@
 
 （管理员、组织负责人）设置场所不可用
 
+以上，组织、上级组织条件筛选
+
 ### 活动管理
 
-（社团负责人）查看活动申请，提交活动申请，撤销活动参与申请
+（管理员、组织负责人、社团负责人）查看自己活动申请，提交活动申请，撤销活动参与申请
 
-（管理员、组织负责人）查看活动申请，审核活动申请
+（管理员、组织负责人）查看管理范围内
+
+（管理员、组织负责人）审核活动申请
+
+以上三项，社团、社团组织、社团上级组织筛选
 
 （管理员、组织负责人）创建并通过活动申请
 
@@ -210,7 +232,7 @@
 
 ### 活动参与申请
 
-（普通用户）查看活动参与申请，提交活动参与申请，撤销活动参与申请
+（普通用户）查看自己活动参与申请，提交活动参与申请，撤销活动参与申请
 
 （管理员、组织负责人）为所属用户创建并通过活动参与申请
 
@@ -218,8 +240,4 @@
 
 （管理员、组织负责人、社团负责人）强制撤销活动参与申请
 
-### 站内信息
-
-搜索其他用户
-
-向其他用户发送站内通知
+以上，社团、社团组织、社团上级组织、用户组织、用户上级组织筛选，活动剩余人数排序
