Accumulated Changes for Version Alpha 0.1.0

--- a/功能计划.md
+++ b/功能计划.md
@@ -146,15 +146,15 @@
 
 ### 用户管理
 
-（管理员）创建用户，支持批量导入
+1（管理员）创建用户，支持批量导入
 
-（管理员）修改用户组织
+1（管理员）修改用户组织
 
-（管理员）修改用户信息
+1（管理员）修改用户信息
 
-（管理员）查看所有用户，能够条件筛选
+1（管理员）查看所有用户，能够条件筛选
 
-（管理员）停用用户
+1（管理员）停用用户
 
 （组织负责人）在下级组织间修改组织
 
@@ -164,13 +164,13 @@
 
 ### 组织管理
 
-（管理员）创建组织，修改组织信息
+1（管理员）创建组织，修改组织信息
 
-（管理员）指定组织负责人
+1（管理员）指定组织负责人
 
-（管理员）停用组织
+1（管理员）停用组织
 
-（管理员）查看所有组织，上级组织条件筛选，人数排序
+1（管理员）查看所有组织，上级组织条件筛选，人数排序
 
 （组织负责人）创建下级组织
 
@@ -178,25 +178,25 @@
 
 （组织负责人）停用下级组织
 
-（组织负责人）查看负责的所有组织和下级组织，上级组织条件筛选，人数排序
+1（组织负责人）查看负责的所有组织和下级组织，上级组织条件筛选，人数排序
 
 ### 社团管理
 
-（管理员）迁移社团
+1（管理员）迁移社团
 
-（管理员、组织负责人）创建社团，修改社团信息
+1（管理员、组织负责人）创建社团，修改社团信息
 
-（管理员、组织负责人）停用社团
+1（管理员、组织负责人）停用社团
 
-（管理员、组织负责人）指定社团负责人
+1（管理员、组织负责人）指定社团负责人
 
-（社团负责人）修改社团信息
+1（社团负责人）修改社团信息
 
 （社团负责人）转让社团
 
-（管理员、组织负责人、社团负责人）管理社团成员
+1（管理员、组织负责人、社团负责人）管理社团成员
 
-（管理员、组织负责人、社团负责人）查看管理社团列表，组织、上级组织条件筛选，人数排序
+1（管理员、组织负责人、社团负责人）查看管理社团列表，组织、上级组织条件筛选，人数排序
 
 ### 社团申请
 
@@ -210,19 +210,19 @@
 
 （管理员）转移场所
 
-（管理员、组织负责人）创建场所、修改场所信息
+1（管理员、组织负责人）创建场所、修改场所信息
 
-（管理员、组织负责人）设置场所不可用
+1（管理员、组织负责人）设置场所不可用
 
 以上，组织、上级组织条件筛选
 
 ### 活动管理
 
-（管理员、组织负责人、社团负责人）查看自己活动申请，提交活动申请，撤销活动参与申请
+1（管理员、组织负责人、社团负责人）查看自己活动申请，提交活动申请，撤销活动参与申请
 
-（管理员、组织负责人）查看管理范围内
+1（管理员、组织负责人）查看管理范围内
 
-（管理员、组织负责人）审核活动申请
+1（管理员、组织负责人）审核活动申请
 
 以上三项，社团、社团组织、社团上级组织筛选
 
